--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity
+            android:name=".EditActivity"
+            android:windowSoftInputMode="adjustNothing"
+            />
     </application>
 
 </manifest>
